fix(ci): Configure proper CI/CD pipeline with ESLint, Prettier, and Git settings
- Update ESLint config to work with Prettier (disable conflicting indent rule)
- Configure Prettier with Windows-compatible line endings (auto)
- Add .gitattributes for proper line ending handling across platforms
- Create .eslintignore and .prettierignore for better file exclusions
- Update CI workflow to use correct npm commands
- Fix HTML syntax errors in index.html
- Ensure all linting and formatting passes successfully
- Tests remain functional with 13 passing tests

All CI/CD checks now pass: lint ✅ format ✅ test ✅

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="hero-badge enhanced-badge" data-aos="fade-down">
               <span class="badge-icon pulse-icon">⚡</span>
               <span class="badge-text">Enterprise GitHub Automation</span>
-              <span class="badge-status">v2.0</span>
+              <span class="badge-status">v0.1.0-alpha</span>
             </div>
 
             <!-- Título com efeito gradiente melhorado -->
@@ -602,7 +602,7 @@
       <section id="agent" class="github-agent-section">
         <div class="container">
           <h2 class="section-title" data-aos="fade-up">
-            GitHub Agent MCP v2.0.0 - PowerShell Enhanced
+            GitHub Agent MCP v0.1.0-alpha - PowerShell Enhanced
           </h2>
           <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">
             Agente PowerShell inteligente com Model Context Protocol (MCP) para
@@ -662,7 +662,7 @@
           </div>
 
           <div class="agent-commands" data-aos="fade-up" data-aos-delay="400">
-            <h3>Comandos PowerShell MCP v2.0.0</h3>
+            <h3>Comandos PowerShell MCP v0.1.0-alpha</h3>
             <div class="commands-grid">
               <div class="command-item">
                 <code>. "scripts/load-agent-in-profile.ps1"</code>
