feat: implementar AI Developer Tools com IAs especializadas para desenvolvimento
🧠 Nova seção AI-Powered Development Stack:
- Claude-3.5 Sonnet como IA principal (200k context)
- GitHub Copilot para autocompletion e chat
- Cursor IDE com multi-file editing
- DeepSeek-Coder para code review e otimização
- Aider + Git para pair programming
- MCP Protocol para extensibilidade

✨ Design moderno e interativo:
- Cards com glass morphism e hover 3D
- Primary AI destacado com gradiente especial
- Capabilities tags para cada ferramenta
- Layout responsivo mobile-first
- Hover effects com shimmer e elevação

🎯 Foco em desenvolvedores:
- IAs com memória e contexto avançado
- Ferramentas de code generation e debugging
- Integração com workflow de desenvolvimento
- Recursos de arquitetura e refactoring

📱 Responsividade completa:
- Grid adaptativo (3 cols → 1 col mobile)
- Layout em coluna para mobile
- Ícones redimensionados
- Capabilities centralizadas

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <div class="feature-pill enhanced-pill">
                 <span class="pill-icon animated-icon">🤖</span>
                 <span class="pill-text">AI-Powered</span>
-                <span class="pill-metric">GPT-4</span>
+                <span class="pill-metric">Claude-3.5</span>
               </div>
             </div>
 
@@ -472,7 +472,7 @@
                   <div class="node-icon">🤖</div>
                   <div class="node-content">
                     <span class="node-title">AI Engine</span>
-                    <span class="node-tech">GPT-4 + MCP</span>
+                    <span class="node-tech">Claude-3.5 + MCP</span>
                   </div>
                 </div>
               </div>
@@ -544,6 +544,88 @@
               <div class="metric-item">
                 <div class="metric-value">5-9s</div>
                 <div class="metric-label">Security Grade</div>
+              </div>
+            </div>
+          </div>
+
+          <!-- AI Developer Tools Section -->
+          <div class="ai-tools-section" data-aos="fade-up" data-aos-delay="1100">
+            <div class="ai-tools-header">
+              <h3>AI-Powered Development Stack</h3>
+              <p>Advanced AI models optimized for coding, reasoning, and developer workflows</p>
+            </div>
+            <div class="ai-tools-grid">
+              <div class="ai-tool-item primary-ai">
+                <div class="ai-icon">🧠</div>
+                <div class="ai-info">
+                  <h4>Claude-3.5 Sonnet</h4>
+                  <p class="ai-description">Primary reasoning and code generation with 200k context window</p>
+                  <div class="ai-capabilities">
+                    <span class="capability">Code Generation</span>
+                    <span class="capability">Debugging</span>
+                    <span class="capability">Architecture</span>
+                  </div>
+                </div>
+              </div>
+              <div class="ai-tool-item">
+                <div class="ai-icon">⚡</div>
+                <div class="ai-info">
+                  <h4>GitHub Copilot</h4>
+                  <p class="ai-description">Real-time code completion and suggestion engine</p>
+                  <div class="ai-capabilities">
+                    <span class="capability">Autocompletion</span>
+                    <span class="capability">Chat</span>
+                    <span class="capability">Tests</span>
+                  </div>
+                </div>
+              </div>
+              <div class="ai-tool-item">
+                <div class="ai-icon">🔍</div>
+                <div class="ai-info">
+                  <h4>Cursor IDE</h4>
+                  <p class="ai-description">AI-first editor with multi-file editing and codebase awareness</p>
+                  <div class="ai-capabilities">
+                    <span class="capability">Code Understanding</span>
+                    <span class="capability">Refactoring</span>
+                    <span class="capability">Commands</span>
+                  </div>
+                </div>
+              </div>
+              <div class="ai-tool-item">
+                <div class="ai-icon">🎯</div>
+                <div class="ai-info">
+                  <h4>DeepSeek-Coder</h4>
+                  <p class="ai-description">Specialized coding model with superior technical reasoning</p>
+                  <div class="ai-capabilities">
+                    <span class="capability">Code Review</span>
+                    <span class="capability">Optimization</span>
+                    <span class="capability">Complexity</span>
+                  </div>
+                </div>
+              </div>
+              <div class="ai-tool-item">
+                <div class="ai-icon">🔄</div>
+                <div class="ai-info">
+                  <h4>Aider + Git</h4>
+                  <p class="ai-description">AI pair programmer with automatic git integration</p>
+                  <div class="ai-capabilities">
+                    <span class="capability">Commit Messages</span>
+                    <span class="capability">Pair Programming</span>
+                    <span class="capability">Branching</span>
+                  </div>
+                </div>
+              </div>
+              <div class="ai-tool-item">
+                <div class="ai-icon">📚</div>
+                <div class="ai-info">
+                  <h4>MCP Protocol</h4>
+                  <p class="ai-description">Model Context Protocol for extensible AI tool integration</p>
+                  <div class="ai-capabilities">
+                    <span class="capability">Context Sharing</span>
+                    <span class="capability">Memory</span>
+                    <span class="capability">Extensions</span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
