daily: daily maintenance and updates - 2025-07-03 11:29

--- a/index.html
+++ b/index.html
@@ -552,14 +552,19 @@
           <div class="ai-tools-section" data-aos="fade-up" data-aos-delay="1100">
             <div class="ai-tools-header">
               <h3>AI-Powered Development Stack</h3>
-              <p>Advanced AI models optimized for coding, reasoning, and developer workflows</p>
+              <p>
+                Advanced AI models optimized for coding, reasoning, and developer
+                workflows
+              </p>
             </div>
             <div class="ai-tools-grid">
               <div class="ai-tool-item primary-ai">
                 <div class="ai-icon">🧠</div>
                 <div class="ai-info">
                   <h4>Claude-3.5 Sonnet</h4>
-                  <p class="ai-description">Primary reasoning and code generation with 200k context window</p>
+                  <p class="ai-description">
+                    Primary reasoning and code generation with 200k context window
+                  </p>
                   <div class="ai-capabilities">
                     <span class="capability">Code Generation</span>
                     <span class="capability">Debugging</span>
@@ -571,7 +576,9 @@
                 <div class="ai-icon">⚡</div>
                 <div class="ai-info">
                   <h4>GitHub Copilot</h4>
-                  <p class="ai-description">Real-time code completion and suggestion engine</p>
+                  <p class="ai-description">
+                    Real-time code completion and suggestion engine
+                  </p>
                   <div class="ai-capabilities">
                     <span class="capability">Autocompletion</span>
                     <span class="capability">Chat</span>
@@ -583,7 +590,9 @@
                 <div class="ai-icon">🔍</div>
                 <div class="ai-info">
                   <h4>Cursor IDE</h4>
-                  <p class="ai-description">AI-first editor with multi-file editing and codebase awareness</p>
+                  <p class="ai-description">
+                    AI-first editor with multi-file editing and codebase awareness
+                  </p>
                   <div class="ai-capabilities">
                     <span class="capability">Code Understanding</span>
                     <span class="capability">Refactoring</span>
@@ -595,7 +604,9 @@
                 <div class="ai-icon">🎯</div>
                 <div class="ai-info">
                   <h4>DeepSeek-Coder</h4>
-                  <p class="ai-description">Specialized coding model with superior technical reasoning</p>
+                  <p class="ai-description">
+                    Specialized coding model with superior technical reasoning
+                  </p>
                   <div class="ai-capabilities">
                     <span class="capability">Code Review</span>
                     <span class="capability">Optimization</span>
@@ -607,7 +618,9 @@
                 <div class="ai-icon">🔄</div>
                 <div class="ai-info">
                   <h4>Aider + Git</h4>
-                  <p class="ai-description">AI pair programmer with automatic git integration</p>
+                  <p class="ai-description">
+                    AI pair programmer with automatic git integration
+                  </p>
                   <div class="ai-capabilities">
                     <span class="capability">Commit Messages</span>
                     <span class="capability">Pair Programming</span>
@@ -619,7 +632,9 @@
                 <div class="ai-icon">📚</div>
                 <div class="ai-info">
                   <h4>MCP Protocol</h4>
-                  <p class="ai-description">Model Context Protocol for extensible AI tool integration</p>
+                  <p class="ai-description">
+                    Model Context Protocol for extensible AI tool integration
+                  </p>
                   <div class="ai-capabilities">
                     <span class="capability">Context Sharing</span>
                     <span class="capability">Memory</span>
